[xpath parser] XPath 3.0 (60) Argument / ExprSingle

--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -4,6 +4,7 @@ parser.error.end-of-comment-without-start=XPST0003: End of comment marker found 
 parser.error.eqname.missing-local-name=XPST0003: Missing local name after '}' in braced URI qualified name.
 parser.error.eqname.wildcard-local-name=XPST0003: Wildcard local name after '}' in braced URI qualified name.
 parser.error.expected=XPST0003: Expected ''{0}''.
+parser.error.expected-either=XPST0003: Expected ''{0}'' or ''{1}''.
 parser.error.expected-eof=XPST0003: Expected end of file.
 parser.error.expected-eqname=XPST0003: Missing qualified name or braced URI qualified name.
 parser.error.expected-expression=XPST0003: Missing expression.
