Report better errors when the LHS of a comparison expression is missing for non-keyword comparisons.

--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -1,5 +1,6 @@
 construct.if-without-else='if' without 'else'
 construct.parenthesized-sequence-type=parenthesized 'SequenceType'
+parser.error.comparison-no-lhs=XPST0003: Comparison without left-hand expression.
 parser.error.end-of-comment-without-start=XPST0003: End of comment marker found without a ''{0}'' start of comment marker.
 parser.error.eqname.missing-local-name=XPST0003: Missing local name after '}' in braced URI qualified name.
 parser.error.eqname.wildcard-local-name=XPST0003: Wildcard local name after '}' in braced URI qualified name.
