Move parser.error.expected-keyword to XPathBundle.

--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -9,6 +9,7 @@ parser.error.expected-either=XPST0003: Expected ''{0}'' or ''{1}''.
 parser.error.expected-eof=XPST0003: Expected end of file.
 parser.error.expected-eqname=XPST0003: Missing qualified name or braced URI qualified name.
 parser.error.expected-expression=XPST0003: Missing expression.
+parser.error.expected-keyword=XPST0003: Expected keyword: {0}.
 parser.error.expected-ncname-not-qname=XPST0003: Expected an identifier not a qualified name.
 parser.error.incomplete-braced-uri-literal=XPST0003: Unclosed braced URI literal.
 parser.error.incomplete-comment=XPST0003: Unclosed XPath/XQuery comment.
