--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -20,6 +20,7 @@ parser.error.qname.missing-prefix=XPST0003: Missing prefix before ':' in qualifi
 parser.error.qname.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a qualified name.
 parser.error.qname.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a qualified name.
 parser.error.qname.wildcard-local-name=XPST0003: Wildcard local name after ':' in qualified name.
+parser.error.return-without-flwor=XPST0003: 'return' keyword in non-for expression.
 parser.error.unexpected-token=XPST0003: Unexpected token.
 parser.error.unexpected-wildcard=XPST0003: Expected qualified name or identifier, not a wildcard.
 parser.error.wildcard.both-prefix-and-local-wildcard=XPST0003: Wildcard prefix and local parts are not allowed.
