Add the database option to the query configuration.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -31,12 +31,15 @@ query.result.table.item-type.column.label=Item Type
 query.result.table.mime-type.column.label=MIME Type
 query.result.table.no-results=The query returned an empty sequence
 query.result.table.value.column.label=Value
+xquery.configurations.processor.content-database.label=Content database:
+xquery.configurations.processor.database-group.label=Database
 xquery.configurations.processor.manage-processors=Manage Query Processors
 xquery.configurations.processor.manage-processors-empty=No processors
 xquery.configurations.processor.query-processor.label=Query processor:
 xquery.configurations.processor.query-group.label=Query
 xquery.configurations.processor.rdf-format.label=RDF output format:
 xquery.configurations.processor.script-file.label=Script file:
+xquery.configurations.processor.updating.label=Enable updating query commands
 xquery.settings.dialog.query-processor.api-jar.label=JAR file:
 xquery.settings.dialog.query-processor.config-path.label=Configuration file:
 xquery.settings.dialog.query-processor.create=New Query Processor Instance
@@ -49,4 +52,3 @@ xquery.settings.dialog.query-processor.password.label=Password:
 xquery.settings.dialog.query-processor.standalone.label=Create a standalone instance
 xquery.settings.dialog.query-processor.username.label=Username:
 xquery.settings.dialog.query-processor.validating-processor=Validating the query processor instance...
-xquery.configurations.processor.updating.label=Enable updating query commands
