Add the module root option to the query configuration.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -35,6 +35,7 @@ xquery.configurations.processor.content-database.label=Content database:
 xquery.configurations.processor.database-group.label=Database
 xquery.configurations.processor.manage-processors=Manage Query Processors
 xquery.configurations.processor.manage-processors-empty=No processors
+xquery.configurations.processor.module-root.label=Module path:
 xquery.configurations.processor.query-processor.label=Query processor:
 xquery.configurations.processor.query-group.label=Query
 xquery.configurations.processor.rdf-format.label=RDF output format:
