Make the module path have a folder browser UI.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -1,5 +1,6 @@
 browser.choose.configuration=Configuration File
 browser.choose.implementation-api-jar=Implementation/API JAR File
+browser.choose.module-path=Module Path
 browser.choose.script-file=Script File
 console.action.save.label=Save
 console.action.save.profile.description=The file will be overridden with the profile report.
