[xpath parser] XPath 3.0 EBNF (106) AnyMapTest

--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -9,6 +9,7 @@ parser.error.expected=XPST0003: Expected ''{0}''.
 parser.error.expected-either=XPST0003: Expected ''{0}'' or ''{1}''.
 parser.error.expected-eof=XPST0003: Expected end of file.
 parser.error.expected-eqname=XPST0003: Missing qualified name or braced URI qualified name.
+parser.error.expected-eqname-or-token=XPST0003: Missing qualified name, braced URI qualified name, or ''{0}''.
 parser.error.expected-expression=XPST0003: Missing expression.
 parser.error.expected-keyword=XPST0003: Expected keyword: {0}.
 parser.error.expected-map-entry-assign=XPST0003: Expected ':' (XQuery 3.1/MarkLogic) or ':=' (Saxon 9.4-9.6).
