--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -112,58 +112,58 @@
 
     <!-- Inspections -->
 
-    <localInspection language="XQuery" shortName="IJVS0001" bundle="messages.XQueryBundle"
+    <localInspection language="XQuery" shortName="IJVS0001" bundle="messages.XQueryPluginBundle"
                      groupKey="inspection.ijvs.group-name" groupPath="XPath and XQuery"
                      key="inspection.ijvs.IJVS0001" hasStaticDescription="true"
                      enabledByDefault="true" level="WARNING"
                      implementationClass="uk.co.reecedunn.intellij.plugin.xpath.codeInspection.ijvs.IJVS0001"/>
-    <localInspection language="XQuery" shortName="IJVS0002" bundle="messages.XQueryBundle"
+    <localInspection language="XQuery" shortName="IJVS0002" bundle="messages.XQueryPluginBundle"
                      groupKey="inspection.ijvs.group-name" groupPath="XPath and XQuery"
                      key="inspection.ijvs.IJVS0002" hasStaticDescription="true"
                      enabledByDefault="true" level="ERROR"
                      implementationClass="uk.co.reecedunn.intellij.plugin.xpath.codeInspection.ijvs.IJVS0002"/>
-    <localInspection language="XQuery" shortName="IJVS0003" bundle="messages.XQueryBundle"
+    <localInspection language="XQuery" shortName="IJVS0003" bundle="messages.XQueryPluginBundle"
                      groupKey="inspection.ijvs.group-name" groupPath="XPath and XQuery"
                      key="inspection.ijvs.IJVS0003" hasStaticDescription="true"
                      enabledByDefault="true" level="ERROR"
                      implementationClass="uk.co.reecedunn.intellij.plugin.xpath.codeInspection.ijvs.IJVS0003"/>
-    <localInspection language="XQuery" shortName="IJVS0004" bundle="messages.XQueryBundle"
+    <localInspection language="XQuery" shortName="IJVS0004" bundle="messages.XQueryPluginBundle"
                      groupKey="inspection.ijvs.group-name" groupPath="XPath and XQuery"
                      key="inspection.ijvs.IJVS0004" hasStaticDescription="true"
                      enabledByDefault="true" level="ERROR"
                      implementationClass="uk.co.reecedunn.intellij.plugin.xpath.codeInspection.ijvs.IJVS0004"/>
-    <localInspection language="XQuery" shortName="IJVS0005" bundle="messages.XQueryBundle"
+    <localInspection language="XQuery" shortName="IJVS0005" bundle="messages.XQueryPluginBundle"
                      groupKey="inspection.ijvs.group-name" groupPath="XPath and XQuery"
                      key="inspection.ijvs.IJVS0005" hasStaticDescription="true"
                      enabledByDefault="true" level="ERROR"
                      implementationClass="uk.co.reecedunn.intellij.plugin.xpath.codeInspection.ijvs.IJVS0005"/>
 
-    <localInspection language="XQuery" shortName="XPST0017" bundle="messages.XQueryBundle"
+    <localInspection language="XQuery" shortName="XPST0017" bundle="messages.XQueryPluginBundle"
                      groupKey="inspection.xpst.group-name" groupPath="XPath and XQuery"
                      key="inspection.xpst.XPST0017" hasStaticDescription="true"
                      enabledByDefault="false" level="ERROR"
                      implementationClass="uk.co.reecedunn.intellij.plugin.xpath.codeInspection.xpst.XPST0017"/>
-    <localInspection language="XQuery" shortName="XQST0031" bundle="messages.XQueryBundle"
+    <localInspection language="XQuery" shortName="XQST0031" bundle="messages.XQueryPluginBundle"
                      groupKey="inspection.xqst.group-name" groupPath="XPath and XQuery"
                      key="inspection.xqst.XQST0031" hasStaticDescription="true"
                      enabledByDefault="true" level="ERROR"
                      implementationClass="uk.co.reecedunn.intellij.plugin.xquery.codeInspection.xqst.XQST0031"/>
-    <localInspection language="XQuery" shortName="XQST0033" bundle="messages.XQueryBundle"
+    <localInspection language="XQuery" shortName="XQST0033" bundle="messages.XQueryPluginBundle"
                      groupKey="inspection.xqst.group-name" groupPath="XPath and XQuery"
                      key="inspection.xqst.XQST0033" hasStaticDescription="true"
                      enabledByDefault="true" level="ERROR"
                      implementationClass="uk.co.reecedunn.intellij.plugin.xquery.codeInspection.xqst.XQST0033"/>
-    <localInspection language="XQuery" shortName="XQST0047" bundle="messages.XQueryBundle"
+    <localInspection language="XQuery" shortName="XQST0047" bundle="messages.XQueryPluginBundle"
                      groupKey="inspection.xqst.group-name" groupPath="XPath and XQuery"
                      key="inspection.xqst.XQST0047" hasStaticDescription="true"
                      enabledByDefault="true" level="ERROR"
                      implementationClass="uk.co.reecedunn.intellij.plugin.xquery.codeInspection.xqst.XQST0047"/>
-    <localInspection language="XQuery" shortName="XPST0081" bundle="messages.XQueryBundle"
+    <localInspection language="XQuery" shortName="XPST0081" bundle="messages.XQueryPluginBundle"
                      groupKey="inspection.xpst.group-name" groupPath="XPath and XQuery"
                      key="inspection.xpst.XPST0081" hasStaticDescription="true"
                      enabledByDefault="true" level="ERROR"
                      implementationClass="uk.co.reecedunn.intellij.plugin.xpath.codeInspection.xpst.XPST0081"/>
-    <localInspection language="XQuery" shortName="XQST0118" bundle="messages.XQueryBundle"
+    <localInspection language="XQuery" shortName="XQST0118" bundle="messages.XQueryPluginBundle"
                      groupKey="inspection.xqst.group-name" groupPath="XPath and XQuery"
                      key="inspection.xqst.XQST0118" hasStaticDescription="true"
                      enabledByDefault="true" level="ERROR"
