Add an XPath color settings page.

--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -29,4 +29,11 @@ parser.error.unexpected-wildcard=XPST0003: Expected qualified name or identifier
 parser.error.wildcard.both-prefix-and-local-wildcard=XPST0003: Wildcard prefix and local parts are not allowed.
 parser.error.wildcard.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a wildcard.
 parser.error.wildcard.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a wildcard.
+xpath.settings.colors.bad.character=Invalid Character
+xpath.settings.colors.comment=Comment
+xpath.settings.colors.escaped.character=Escaped Character
+xpath.settings.colors.identifier=Identifier
+xpath.settings.colors.keyword=Keyword
+xpath.settings.colors.number=Number
+xpath.settings.colors.string=String
 xpath.files.filetype.description=XML Path Language
