Display different text while the query is running.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -31,6 +31,7 @@ profile.entry.table.shallow-time.column.label=Shallow Time (s)
 query.result.table.item-type.column.label=Item Type
 query.result.table.mime-type.column.label=MIME Type
 query.result.table.no-results=The query returned an empty sequence
+query.result.table.results-pending=The query is still running
 query.result.table.value.column.label=Value
 xquery.configurations.processor.content-database.label=Content database:
 xquery.configurations.processor.database-group.label=Database
