Display different text while the query is actively running via the profile action.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -27,6 +27,7 @@ profile.entry.table.hits.column.label=Hits
 profile.entry.table.line-number.column.label=Line
 profile.entry.table.module.column.label=Module
 profile.entry.table.no-results=No detailed profile results available
+profile.entry.table.results-pending=The query is still running
 profile.entry.table.shallow-time.column.label=Shallow Time (s)
 query.result.table.item-type.column.label=Item Type
 query.result.table.mime-type.column.label=MIME Type
