Display a message in the profile view if the query failed with an exception.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -23,6 +23,7 @@ profile.console.version.label.no-value=Version:
 profile.entry.table.column-number.column.label=Column
 profile.entry.table.deep-time.column.label=Deep Time (s)
 profile.entry.table.expression.column.label=Expression
+profile.entry.table.has-exception=The query failed with an exception
 profile.entry.table.hits.column.label=Hits
 profile.entry.table.line-number.column.label=Line
 profile.entry.table.module.column.label=Module
