Fix IntelliJ 2019.1 compatibility for ModuleRootManager.

--- a/src/intellij-mock/build.gradle
+++ b/src/intellij-mock/build.gradle
@@ -4,4 +4,5 @@ sourceSets.test.java.srcDirs += 'test'
 dependencies {
     compile project(':src:kotlin-hamcrest')
     compile project(':src:kotlin-intellij')
+    compile project(':src:intellij-compat')
 }
