Add namespace prefix configuration to the color settings page.

--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -34,6 +34,7 @@ xpath.settings.colors.comment=Comment
 xpath.settings.colors.escaped.character=Escaped Character
 xpath.settings.colors.identifier=Identifier
 xpath.settings.colors.keyword=Keyword
+xpath.settings.colors.ns-prefix=Namespace Prefix
 xpath.settings.colors.number=Number
 xpath.settings.colors.string=String
 xpath.files.filetype.description=XML Path Language
