--- a/src/lang-xquery/main/resources/messages/XQueryBundle.properties
+++ b/src/lang-xquery/main/resources/messages/XQueryBundle.properties
@@ -5,6 +5,7 @@ xquery.settings.colors.entity.reference=Entity Reference
 xquery.settings.colors.escaped.character=Escaped Character
 xquery.settings.colors.identifier=Identifier
 xquery.settings.colors.keyword=Keyword
+xquery.settings.colors.ns-prefix=Namespace Prefix
 xquery.settings.colors.number=Number
 xquery.settings.colors.string=String
 xquery.settings.colors.xml.tag=Direct XML Construction//Tag
