Move the predefined entities map to lang-core.

--- a/src/lang-core/build.gradle
+++ b/src/lang-core/build.gradle
@@ -1,4 +1,6 @@
 sourceSets.main.java.srcDirs += 'main'
+sourceSets.main.resources.srcDirs += 'main/resources'
+
 sourceSets.test.java.srcDirs += 'test'
 sourceSets.test.resources.srcDirs += 'test/resources'
 
