Move XQueryProjectSettingsConfigurable to lang-xquery.

--- a/src/lang-xquery/main/resources/messages/XQueryBundle.properties
+++ b/src/lang-xquery/main/resources/messages/XQueryBundle.properties
@@ -17,3 +17,9 @@ xquery.settings.colors.xml.escaped.character=Direct XML Construction//Escaped Ch
 xquery.settings.colors.xqdoc.markup=xqDoc//Markup
 xquery.settings.colors.xqdoc.tag=xqDoc//Tag
 xquery.settings.colors.xqdoc.tag-value=xqDoc//Tag Value
+xquery.settings.project.implementation.label=Implementation:
+xquery.settings.project.implementation.version.label=Implementation version:
+xquery.settings.project.default.version.label=Default XQuery version:
+xquery.settings.project.dialect.1.0.label=Dialect for XQuery 1.0:
+xquery.settings.project.dialect.3.0.label=Dialect for XQuery 3.0:
+xquery.settings.project.dialect.3.1.label=Dialect for XQuery 3.1:
