--- a/src/lang-xquery/main/resources/messages/XQueryBundle.properties
+++ b/src/lang-xquery/main/resources/messages/XQueryBundle.properties
@@ -1,3 +1,4 @@
+xquery.files.filetype.description=XML Query Language
 xquery.settings.colors.annotation=Annotation
 xquery.settings.colors.bad.character=Invalid Character
 xquery.settings.colors.comment=Comment
