--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,8 @@ src/lang-xpath/test/resources/tests/parser/xpath-3.0/*.txt text eol=lf
 src/lang-xpath/test/resources/tests/parser/xpath-3.0/*.xq text eol=lf
 src/lang-xpath/test/resources/tests/parser/xpath-3.1/*.txt text eol=lf
 src/lang-xpath/test/resources/tests/parser/xpath-3.1/*.xq text eol=lf
+src/lang-xpath/test/resources/tests/parser/xpath-ng/xpath/proposal-*/*.txt text eol=lf
+src/lang-xpath/test/resources/tests/parser/xpath-ng/xpath/proposal-*/*.xq text eol=lf
 src/test/resources/tests/folding/*.xq text eol=lf
 src/test/resources/tests/parser/basex-6.1/*.txt text eol=lf
 src/test/resources/tests/parser/basex-6.1/*.xq text eol=lf
