--- a/src/plugin-saxon/build.gradle
+++ b/src/plugin-saxon/build.gradle
@@ -1,4 +1,6 @@
 sourceSets.main.java.srcDirs += 'main'
+sourceSets.main.resources.srcDirs += 'main/resources'
+
 sourceSets.test.java.srcDirs += 'test'
 
 dependencies {
