Move the EXPath builtin function definitions to a new plugin-expath subproject.

--- a/build.gradle
+++ b/build.gradle
@@ -133,6 +133,8 @@ dependencies {
     compile project(':src:plugin-marklogic')
     compile project(':src:plugin-saxon')
 
+    compile project(':src:plugin-expath')
+
     testCompile project(':src:kotlin-hamcrest')
     testCompile project(':src:intellij-mock')
 
