--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@ include 'src:lang-xqdoc'
 include 'src:lang-xslt'
 
 include 'src:plugin-expath'
+include 'src:plugin-exquery'
 
 include 'src:plugin-basex'
 include 'src:plugin-existdb'
