--- a/src/lang-xquery/main/resources/messages/XQueryBundle.properties
+++ b/src/lang-xquery/main/resources/messages/XQueryBundle.properties
@@ -1,3 +1,4 @@
+find-usages.identifier=Identifier
 parser.error.cdata-section-not-in-element-content=XPST0003: CDATA sections must be placed within element tags.
 parser.error.comparison-no-lhs-or-direlem=XPST0003: Comparison without left-hand expression, or incomplete direct element constructor.
 parser.error.empty-entity=XPST0003: Entity references must not be empty.
