--- a/src/lang-xdm/build.gradle
+++ b/src/lang-xdm/build.gradle
@@ -4,5 +4,7 @@ sourceSets.test.java.srcDirs += 'test'
 dependencies {
     compile project(':src:lang-core')
 
+    testCompile project(':src:intellij-mock')
     testCompile project(':src:kotlin-hamcrest')
+    testCompile project(':src:lang-xquery')
 }
