Test the default values for QueryProcessorRunConfiguration.

--- a/src/plugin-api/build.gradle
+++ b/src/plugin-api/build.gradle
@@ -7,5 +7,7 @@ dependencies {
     compile project(':src:intellij-compat')
     compile project(':src:lang-xdm')
 
+    testCompile project(':src:intellij-mock')
     testCompile project(':src:kotlin-hamcrest')
+    testCompile project(':src:lang-xpath')
 }
