--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,6 +14,10 @@
 
   <change-notes><![CDATA[
     <h3>Release 1.4-dev:</h3>
+    <p>Bug Fixes:</p>
+    <ol>
+      <li>Fix an issue with run configuration settings not saving in IntelliJ 2018.3 and later.</li>
+    </ol>
     <p>EXPath Syntax Extensions:</p>
     <ol>
       <li>Support the variadic function arguments proposal.</li>
