XQuery comments without an xqDoc marker should not tokenize tag content.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -17,6 +17,7 @@
     <p>Bug Fixes:</p>
     <ol>
       <li>Fix an issue with run configuration settings not saving in IntelliJ 2018.3 and later.</li>
+      <li>Don't highlight xqDoc tags in non-xqDoc comments.</li>
     </ol>
     <p>EXPath Syntax Extensions:</p>
     <ol>
