--- a/src/lang-xquery/build.gradle
+++ b/src/lang-xquery/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     testCompile project(':src:intellij-mock')
     testCompile project(':src:kotlin-hamcrest')
 
+    testCompile project(':src:plugin-basex')
     testCompile project(':src:plugin-marklogic')
     testCompile project(':src:plugin-saxon')
     testCompile project(':src:plugin-w3')
