Rename 'Script file' to 'Local file' in the QueryProcessorDataSource UI.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -43,7 +43,7 @@ xquery.configurations.processor.module-root.label=Module path:
 xquery.configurations.processor.query-processor.label=Query processor:
 xquery.configurations.processor.query-group.label=Query
 xquery.configurations.processor.rdf-format.label=RDF output format:
-xquery.configurations.processor.script-file.label=Script file:
+xquery.configurations.processor.script-file.label=Local file:
 xquery.configurations.processor.server.label=Server:
 xquery.configurations.processor.updating.label=Enable updating query commands
 xquery.settings.dialog.query-processor.api-jar.label=JAR file:
