--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -36,6 +36,7 @@ query.result.table.no-results=The query returned an empty sequence
 query.result.table.results-pending=The query is still running
 query.result.table.value.column.label=Value
 xquery.configurations.data-source.active-editor-file.label=Active editor file
+xquery.configurations.data-source.database-module.label=Database module:
 xquery.configurations.data-source.local-file.label=Local file:
 xquery.configurations.processor.content-database.label=Content database:
 xquery.configurations.processor.database-group.label=Database
