Reorganise the run configuration UI.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -44,9 +44,8 @@ xquery.configurations.processor.manage-processors=Manage Query Processors
 xquery.configurations.processor.manage-processors-empty=No processors
 xquery.configurations.processor.module-root.label=Module path:
 xquery.configurations.processor.query-processor.label=Query processor:
-xquery.configurations.processor.query-group.label=Query
+xquery.configurations.processor.query-group.label=Run the query from:
 xquery.configurations.processor.rdf-format.label=RDF output format:
-xquery.configurations.processor.script-file.label=Local file:
 xquery.configurations.processor.server.label=Server:
 xquery.configurations.processor.updating.label=Enable updating query commands
 xquery.settings.dialog.query-processor.api-jar.label=JAR file:
