Split out the database settings into a separate tab.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -39,12 +39,13 @@ xquery.configurations.data-source.active-editor-file.label=Active editor file
 xquery.configurations.data-source.database-module.label=Database module:
 xquery.configurations.data-source.local-file.label=Local file:
 xquery.configurations.processor.content-database.label=Content database:
-xquery.configurations.processor.database-group.label=Database
+xquery.configurations.processor.group.database.label=Database
+xquery.configurations.processor.group.query.label=Query
 xquery.configurations.processor.manage-processors=Manage Query Processors
 xquery.configurations.processor.manage-processors-empty=No processors
 xquery.configurations.processor.module-root.label=Module path:
 xquery.configurations.processor.query-processor.label=Query processor:
-xquery.configurations.processor.query-group.label=Run the query from:
+xquery.configurations.processor.run-query-from.label=Run the query from:
 xquery.configurations.processor.rdf-format.label=RDF output format:
 xquery.configurations.processor.server.label=Server:
 xquery.configurations.processor.updating.label=Enable updating query commands
