--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -1,4 +1,5 @@
 browser.choose.configuration=Configuration File
+browser.choose.context-item=Context Item
 browser.choose.implementation-api-jar=Implementation/API JAR File
 browser.choose.module-path=Module Path
 browser.choose.script-file=Script File
@@ -39,6 +40,7 @@ xquery.configurations.data-source.active-editor-file.label=Active editor file
 xquery.configurations.data-source.database-module.label=Database module:
 xquery.configurations.data-source.local-file.label=Local file:
 xquery.configurations.processor.content-database.label=Content database:
+xquery.configurations.processor.group.context-item.label=Context Item
 xquery.configurations.processor.group.database.label=Database
 xquery.configurations.processor.group.query.label=Query
 xquery.configurations.processor.manage-processors=Manage Query Processors
