Use 'Input' instead of 'Context Item' for XSLT queries.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -43,6 +43,7 @@ xquery.configurations.data-source.local-file.label=Local file:
 xquery.configurations.processor.content-database.label=Content database:
 xquery.configurations.processor.group.context-item.label=Context Item
 xquery.configurations.processor.group.database.label=Database
+xquery.configurations.processor.group.input.label=Input
 xquery.configurations.processor.group.query.label=Query
 xquery.configurations.processor.manage-processors=Manage Query Processors
 xquery.configurations.processor.manage-processors-empty=No processors
