Make QueryResultTextView implement ConsoleView directly.
The ConsoleViewImpl class limits the output displayed in the console
window. As such, it is not good for storing the result of a query
that outputs a lot of content (e.g. a large file).

--- a/src/plugin-api/build.gradle
+++ b/src/plugin-api/build.gradle
@@ -5,6 +5,7 @@ sourceSets.test.java.srcDirs += 'test'
 
 dependencies {
     compile project(':src:intellij-compat')
+    compile project(':src:kotlin-intellij')
     compile project(':src:lang-xdm')
 
     testCompile project(':src:intellij-mock')
