--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -31,6 +31,7 @@ profile.entry.table.module.column.label=Module
 profile.entry.table.no-results=No detailed profile results available
 profile.entry.table.results-pending=The query is still running
 profile.entry.table.shallow-time.column.label=Shallow Time (s)
+query.result.table.has-exception=The query failed with an exception
 query.result.table.item-type.column.label=Item Type
 query.result.table.mime-type.column.label=MIME Type
 query.result.table.no-results=The query returned an empty sequence
