--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,7 +13,7 @@
   ]]></description>
 
   <change-notes><![CDATA[
-    <h3>Release 1.4-dev:</h3>
+    <h3>Release 1.4:</h3>
     <p>IntelliJ Integration:</p>
     <ol>
       <li>Register the XSLT 3.0 schema with IntelliJ.</li>
