--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,54 +13,7 @@
   ]]></description>
 
   <change-notes><![CDATA[
-    <h3>Release 1.4:</h3>
-    <p>IntelliJ Integration:</p>
-    <ol>
-      <li>Register the XSLT 3.0 schema with IntelliJ.</li>
-      <li>Display the first comment line when the comment is folded.</li>
-      <li>Support profiling MarkLogic queries.</li>
-      <li>Support configuring the namespace prefix colour.</li>
-    </ol>
-    <p>Bug Fixes:</p>
-    <ol>
-      <li>Fix an issue with run configuration settings not saving in IntelliJ 2018.3 and later.</li>
-      <li>Don't highlight xqDoc tags in non-xqDoc comments.</li>
-      <li>Don't throw an IllegalCharsetNameException if the encoding string spans to the next line.</li>
-    </ol>
-    <p>XPath and XQuery:</p>
-    <ol>
-      <li>Support the expath-ng variadic function arguments proposal.</li>
-      <li>
-        Fix parsing QNames in NameTests where the prefix is <code>attribute</code>,
-        <code>element</code>, <code>every</code>, <code>exit</code>, <code>namespace</code>,
-        <code>processing-instruction</code>, <code>return</code>, or <code>some</code>.
-      </li>
-      <li>
-        Fix parsing NCNames in FunctionCalls and NameTests where the name is
-        <code>some</code>, or <code>every</code>.
-      </li>
-      <li>
-        Fix parsing  <code>``[`{...}`...`]``</code> -- <code>StringConstructorInterpolation</code>
-        at the start of a <code>StringConstructor</code>.
-      </li>
-    </ol>
-    <p>Static Context:</p>
-    <ol>
-      <li>
-        Add support for the eXist-db built-in functions and static context. Thanks
-        to Bridger Dyson-Smith for providing the built-in function definitions.
-      </li>
-      <li>Add the <code>err</code> and <code>output</code> namespaces to the BaseX static context.</li>
-    </ol>
-    <p>Function Resolution:</p>
-    <ol>
-      <li>Correctly match functions with variadic function arguments.</li>
-    </ol>
-    <p>Inspections:</p>
-    <ol>
-      <li>XPST0017: Fix the arity check for variadic functions.</li>
-      <li>XPST0118: Don't crash on code like <code>&lt;/&lt;test/&gt;</code>.</li>
-    </ol>
+    <h3>Release 1.5-dev:</h3>
   ]]></change-notes>
 
   <idea-version since-build="161"/>
