--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,6 +14,16 @@
 
   <change-notes><![CDATA[
     <h3>Release 1.5-dev:</h3>
+    <p>Bug Fixes:</p>
+    <ol>
+      <li>Fixed the builtin function definitions to be valid XQuery after the ItemType and SequenceType changes for annotated and union sequence types in 1.4.</li>
+      <li>Fixed running queries on MarkLogic prior to 8.0-7 and 9.0-2.</li>
+      <li>Persist the updating option in the run configuration settings.</li>
+    </ol>
+    <p>XPath and XQuery:</p>
+    <ol>
+      <li>Removed support for the plugin-specific annotated sequence type syntax.</li>
+    </ol>
   ]]></change-notes>
 
   <idea-version since-build="161"/>
