--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,15 +14,19 @@
 
   <change-notes><![CDATA[
     <h3>Release 1.5-dev:</h3>
-    <p>Bug Fixes:</p>
-    <ol>
-      <li>Fixed the builtin function definitions to be valid XQuery after the ItemType and SequenceType changes for annotated and union sequence types in 1.4.</li>
-      <li>Fixed running queries on MarkLogic prior to 8.0-7 and 9.0-2.</li>
-      <li>Persist the updating option in the run configuration settings.</li>
-    </ol>
     <p>XPath and XQuery:</p>
     <ol>
       <li>Removed support for the plugin-specific annotated sequence type syntax.</li>
+    </ol>
+    <p>Static Context:</p>
+    <ol>
+      <li>Fixed the builtin function definitions to be valid XQuery after the ItemType and SequenceType changes for annotated and union sequence types in 1.4.</li>
+    </ol>
+    <p>Run Configurations:</p>
+    <ol>
+      <li>Fixed running queries on MarkLogic prior to 8.0-7 and 9.0-2.</li>
+      <li>Persist the updating option in the run configuration settings.</li>
+      <li>Display the name of the query being run instead of an empty string in stack traces.</li>
     </ol>
   ]]></change-notes>
 
