--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,7 +13,7 @@
   ]]></description>
 
   <change-notes><![CDATA[
-    <h3>Release 1.5-dev:</h3>
+    <h3>Release 1.4.1:</h3>
     <p>IntelliJ Integration:</p>
     <ol>
       <li>Support code folding for <code>DirCommentConstructor</code> elements (<code>&lt;!--...--&gt;</code>).</li>
