--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,25 +13,7 @@
   ]]></description>
 
   <change-notes><![CDATA[
-    <h3>Release 1.4.1:</h3>
-    <p>IntelliJ Integration:</p>
-    <ol>
-      <li>Support code folding for <code>DirCommentConstructor</code> elements (<code>&lt;!--...--&gt;</code>).</li>
-    </ol>
-    <p>XPath and XQuery:</p>
-    <ol>
-      <li>Removed support for the plugin-specific annotated sequence type syntax.</li>
-    </ol>
-    <p>Static Context:</p>
-    <ol>
-      <li>Fixed the builtin function definitions to be valid XQuery after the ItemType and SequenceType changes for annotated and union sequence types in 1.4.</li>
-    </ol>
-    <p>Run Configurations:</p>
-    <ol>
-      <li>Fixed running queries on MarkLogic prior to 8.0-7 and 9.0-2.</li>
-      <li>Persist the updating option in the run configuration settings.</li>
-      <li>Display the name of the query being run instead of an empty string in stack traces.</li>
-    </ol>
+    <h3>Release 1.5-dev:</h3>
   ]]></change-notes>
 
   <idea-version since-build="161"/>
