Add the XPath subset selection to the run configuration UI.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -66,3 +66,4 @@ xquery.settings.dialog.query-processor.password.label=Password:
 xquery.settings.dialog.query-processor.standalone.label=Create a standalone instance
 xquery.settings.dialog.query-processor.username.label=Username:
 xquery.settings.dialog.query-processor.validating-processor=Validating the query processor instance...
+xquery.configurations.processor.xpath-subset.label=XPath subset:
