--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,6 +14,10 @@
 
   <change-notes><![CDATA[
     <h3>Release 1.5-dev:</h3>
+    <p>Run Configurations:</p>
+    <ol>
+      <li>Support running XPath queries as XSLT patterns on the Saxon query processor.</li>
+    </ol>
   ]]></change-notes>
 
   <idea-version since-build="161"/>
