Rename ProfileEntry.{hits => count}.

--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -22,10 +22,10 @@ profile.console.elapsed.label.no-value=Elapsed:
 profile.console.version.label=Version: {0}
 profile.console.version.label.no-value=Version:
 profile.entry.table.column-number.column.label=Column
+profile.entry.table.count.column.label=Count
 profile.entry.table.deep-time.column.label=Deep Time (s)
 profile.entry.table.expression.column.label=Expression
 profile.entry.table.has-exception=The query failed with an exception
-profile.entry.table.hits.column.label=Hits
 profile.entry.table.line-number.column.label=Line
 profile.entry.table.module.column.label=Module
 profile.entry.table.no-results=No detailed profile results available
