Fix creating a SequenceOutputter on Saxon 9.3 and earlier.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -21,7 +21,7 @@
     </ol>
     <p>Saxon:</p>
     <ol>
-      <li>Fix using Saxon 9.2 to 9.8 JAR files: the <code>RawDestination</code> class is not available in these versions.</li>
+      <li>Fix using Saxon 9.2 to 9.8 JAR files.</li>
       <li>Disable Saxon EE optimizations to prevent the processor throwing a <code>NoClassDefFoundError</code> looking for <code>com/saxonica/ee/bytecode/GeneratedCode</code>.</li>
     </ol>
   ]]></change-notes>
