--- a/src/plugin-api/main/resources/messages/PluginApiBundle.properties
+++ b/src/plugin-api/main/resources/messages/PluginApiBundle.properties
@@ -6,6 +6,8 @@ browser.choose.script-file=Script File
 console.action.save.label=Save
 console.action.save.profile.description=The file will be overridden with the profile report.
 console.action.save.profile.title=Save Profile Report
+console.result-count.label=Items: {0}
+console.result-count.label.no-value=Items:
 error.missing-xslt-source=Missing source document (context item)
 executor.profile.toolwindow.name=Profile
 executor.profile.start.action=Profile
